--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
     <!--Main-->
     <main>Main</main>
     <!--Footer-->
-    <footer>Footer</footer>
+    <footer>
+      <ul>
+        <li><a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+      </ul>
+    </footer>
+
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/ff55b05e75.js" crossorigin="anonymous"></script>
   </body>
 </html>
