--- a/signup.html
+++ b/signup.html
@@ -37,7 +37,37 @@
         </nav>
     </header>
     <!--Main-->
-    <main>Main</main>
+    <main>
+        <section id="signup">
+            <form id="signup-form" method="POST" action="https://formdump.codeinstitute.net">
+                <h2><i class="fa-solid fa-heart-pulse"></i>LET'S GET YOU SIGNED UP</h2>
+                <label for="first-name">First Name</label>
+                <input type="text" name="first-name" id="first-name" required>
+                <br>
+                <label for="last-name">Last Name</label>
+                <input type="text" name="last-name" id="last-name" required>
+                <br>
+                <label for="email-address">Email Address</label>
+                <input type="text" name="email-address" id="email-address" required>
+                <br>
+                <div class="radio-buttons">
+                    <div>
+                        <label for="road">Road</label>
+                        <input type="radio" name="running-preference" id="road" value="road" required checked>
+                    </div>
+                    <div>
+                        <label for="trail">Trail</label>
+                        <input type="radio" name="running-preference" id="trail" value="trail" required>
+                    </div>
+                    <div>
+                        <label for="both">Both</label>
+                        <input type="radio" name="running-preference" id="both" value="both" required>
+                    </div>
+                </div>
+                <button type="submit" class="join-button">Let's Run!</button>
+            </form>
+        </section>
+    </main>
     <!--Footer-->
     <footer>
       <ul id="social-networks">
